added broken authentication vulnerability

--- a/vulnerabilities.html
+++ b/vulnerabilities.html
@@ -13,7 +13,8 @@
             <div class="vulnerabilities">
                 <a href="xss.html" class="vulnerability-tile">Cross-Site Scripting (XSS) - Reflected</a>
                 <a href="idor.html" class="vulnerability-tile">Insecure Direct Object References (IDOR)</a>
-                <a href="sql-injection.html" class="vulnerability-tile">SQL Injection (Basic)</a>                
+                <a href="sql-injection.html" class="vulnerability-tile">SQL Injection (Basic)</a>
+                <a href="broken-auth.html" class="vulnerability-tile">Broken Authentication</a>
             </div>
             <p><strong>Note:</strong> There are more pages, functionality, and vulnerabilities coming!</p>
         </div>
